<resources>
    <string name="app_name">Cool Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="time">01:00</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="color">Color</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="sound_disabled">Sound Disabled</string>
    <string name="sound_enabled">Sound Enabled</string>
    <string name="timer_melody">Timer Melody</string>
    <string name="timer_default_interval">Timer Defaut Interval</string>
</resources>
