<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_applications_white_24dp"
        />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_white_24dp"
        />
    <item
        android:id="@+id/action_color"
        android:title="@string/color"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_color_lens_white_24dp"
        />

</menu>